[iOS] UnifiedConsentCoordinator needs to be released after being dismissed

|_unifiedConsentCoordinator| should be removed once the sign-in is done
and the user consent is recorded.
This is to avoid to receive notifications related to the UIScrollView
in UnifiedConsentViewController, like:
-[ChromeSigninViewController unifiedConsentCoordinatorDidReachBottom:]

Bug: 918557
Change-Id: I9d57dbf4d9f37f636fa44105f268d7089e192abf
Reviewed-on: https://chromium-review.googlesource.com/c/1393372
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Jérôme Lebel <jlebel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619615}