ios/chrome/browser/ui/authentication/chrome_signin_view_controller.mm
@@ -290,6 +290,8 @@ enum AuthenticationState {
     _didFinishSignIn = YES;
     [_delegate didAcceptSignIn:self showAccountsSettings:showAccountsSettings];
   }
+  _unifiedConsentCoordinator.delegate = nil;
+  _unifiedConsentCoordinator = nil;
 }
 
 - (void)acceptSignInAndCommitSyncChanges {
